# tikz2png

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  setup.bat  setup.sh
.github/workflows/: python-app.yml
src/tikz2png/: __init__.py  __main__.py  config.py  converter.py  directories.py  errors.py  interfaces.py
tests/: __init__.py  conftest.py  test_config.py  test_converter.py  test_directories.py  test_file_manager.py  test_image_converter.py  test_latex_compiler.py  test_tikz_converter.py
